# claude-usage-meter

./: .gitignore  ClaudeUsageMeter.spec  LICENSE  README.md  app.py  build.py  constants.py  fetcher.py  meter_widget.py  pyproject.toml  settings.py  tooltip_widget.py  tray.py  usage.py
.github/workflows/: release.yml
vendors/: __init__.py  base.py  claude.py  gemini.py
